# rentable

./: .env.example  .eslintignore  .gitignore  .prettierignore  .typesafe-i18n.json  CHANGELOG.md  CLAUDE.md  CONTEXT.md  components.json  drizzle.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.changeset/: afraid-shoes-sink.md  better-spies-matter.md  big-singers-play.md  busy-birds-give.md  config.json  cool-groups-enjoy.md  every-teams-sing.md  fifty-cobras-lay.md  floppy-rice-shop.md  giant-groups-read.md  great-radios-jam.md  heavy-actors-call.md  khaki-shoes-mix.md  kind-candles-warn.md  kind-sheep-learn.md  lemon-oranges-chew.md  metal-dogs-return.md  neat-rabbits-tap.md  plenty-doodles-type.md  proud-donkeys-lay.md  real-steaks-stop.md  sixty-streets-make.md  solid-shrimps-refuse.md  swift-pugs-sell.md  tall-snakes-laugh.md  tender-toys-thank.md  wacky-bananas-know.md  wise-games-speak.md  witty-jokes-shine.md  witty-masks-itch.md  yellow-maps-draw.md  young-dancers-join.md
.github/: changeset-tag.cjs  changeset-version.cjs  labeler.yml  renovate.json
.github/ISSUE_TEMPLATE/: documentation.yml
.github/workflows/: changesets.yml  integration.yml  labeler.yml  release.yml
docs/agents/: triage-labels.md
scripts/: purge.ts  seed.ts  tauri-with-env.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  diesel.toml
src-tauri/migrations/2025-08-04-123215_create_tables/: down.sql
src-tauri/src/: lib.rs  models.rs  schema.rs
src-tauri/src/commands/: show_window.rs
tauri/: Cargo.toml  build.rs  settings.json  tauri.conf.json
tauri/capabilities/: default.json
tauri/migrations/: 0000_gifted_firebird.sql
tauri/migrations/2025-08-04-123215_create_tables/: up.sql
tauri/migrations/meta/: 0000_snapshot.json  _journal.json
tauri/src/: backup.rs  bootstrap.rs  commands.rs  error.rs  lib.rs  main.rs  persisted.rs  remote_sync.rs  settings.rs  state.rs  timestamp.rs  update.rs  window.rs
tauri/src/backup/: command.rs  manifest.rs  snapshot.rs  state.rs  tests.rs
tauri/src/commands/: mod.rs
tauri/src/database/: commands.rs  migrations.rs  mod.rs  proxy.rs
tauri/src/remote_sync/: command.rs  google.rs  lock.rs  session.rs  store.rs  tests.rs
tauri/src/remote_sync/google/: auth.rs  conflict.rs  manifest.rs  retention.rs  transport.rs
(+662 files in other folders)
