[package]
name = "rentable"
version = "0.1.0"
description = "a rents payment tracker"
authors = ["saud-alnasser"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rentable_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version="2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
# the version is fixed due to a requirement by diesel
libsqlite3-sys = { version = "=0.35", features = ["bundled"] }
dotenvy = { version = "0.15" }

