[package]
name = "rentable"
version = "0.1.0"
description = "a rents payment tracker"
authors = ["saud-alnasser"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rentable_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = { version = "2.5.3" } 
tauri-plugin-fs = { version = "2.4.5" } 
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", default-features = false , features = ["runtime-tokio-rustls", "macros", "sqlite", "migrate", "uuid", "chrono"] }
sqlparser = { version = "0.60.0" }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
base64 = { version = "0.22.1" }
dotenvy = { version = "0.15.7" }
